--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": https://filipulman.github.io/muj-web/"
+  "homepage": "https://filipulman.github.io/muj-web/"
   "name": "muj-web",
   "private": true,
   "version": "0.0.0",
